# fr-supermarket-demand-forecasting

./: README.md  download_raw_data.py  features.csv  forecast_dashboard.html  predictions.csv  pyproject.toml  requirements.txt
